@@ -6,7 +6,16 @@ This file contains SPOILERS, which might ruin your IVAN experience totally. The 
 is also provided AS IS and is probably completely unreadable.
 
 ------------------------------------------------------------------------------------
+July 9 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
 
+	* Chests in inventory can be unlocked/locked.
+	* Possible abuse prohibited in key-code 
+
+	1 : unlock chest
+	2 : lock chest
+	3 : goto 1
+	(gives dex)
+	
 July 8 2003 Timo Kiviluoto <sonor@phpoint.fi>
 
 	* Corrected a fatal bug in the level loading code
